[gd_scene load_steps=11 format=2]

[ext_resource path="res://entities/npc/npc.gd" type="Script" id=1]
[ext_resource path="res://entities/npc/clap_controller.gd" type="Script" id=2]
[ext_resource path="res://entities/npc/animations/npc_clap.tres" type="Animation" id=3]
[ext_resource path="res://entities/npc/animations/npc_idle.tres" type="Animation" id=4]

[sub_resource type="SphereMesh" id=1]
radial_segments = 16
rings = 16

[sub_resource type="CapsuleMesh" id=2]
radius = 0.35
radial_segments = 16

[sub_resource type="SphereMesh" id=3]
radius = 0.15
height = 0.3
radial_segments = 12
rings = 12

[sub_resource type="Animation" id=4]
resource_name = "npc_fist_pump"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("LeftArm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -30, 0 ), Vector3( 40.5259, -59.4215, -12.9065 ), Vector3( 40.5259, -59.4215, -12.9065 ), Vector3( 0, -30, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftArm:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.255106, 0, 0 ), Vector3( 0.255106, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("ClapController")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shout"
} ]
}

[sub_resource type="Animation" id=5]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("LeftArm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -30, 0 ), Vector3( 24, -30, 0 ), Vector3( 24, -30, 0 ), Vector3( 0, -30, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 30, 0 ), Vector3( 24, 30, 0 ), Vector3( 24, 30, 0 ), Vector3( 0, 30, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("ClapController")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shout"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "npc_wave"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("LeftArm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -30, 0 ), Vector3( 58.1859, -71.5265, -68.5379 ), Vector3( 58.1859, -71.5265, -68.5379 ), Vector3( 0, -30, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 30, 0 ), Vector3( 58.1847, 71.5204, 68.5307 ), Vector3( 58.1847, 71.5204, 68.5307 ), Vector3( 0, 30, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeftArm:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.424368, 0, 0 ), Vector3( 0.424368, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RightArm:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.420932, 0, 0 ), Vector3( -0.420932, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("ClapController")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shout"
} ]
}

[node name="NPC" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.897921, 0 )
script = ExtResource( 1 )

[node name="ClapController" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="ClapSound" type="AudioStreamPlayer3D" parent="ClapController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0885866, -0.565399 )
unit_size = 15.0
max_db = 2.0
max_distance = 20.0
bus = "World"

[node name="Voice" type="AudioStreamPlayer3D" parent="ClapController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.415241, 0 )
unit_size = 20.0
max_distance = 20.0
bus = "World"

[node name="Timer" type="Timer" parent="ClapController"]
one_shot = true

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.537205, 0 )

[node name="Head" type="CSGMesh" parent="Head"]
transform = Transform( 0.467154, 0, 0, 0, 0.467154, -1.77636e-15, 0, 1.77636e-15, 0.467154, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="Head2" type="CSGMesh" parent="Head"]
transform = Transform( 0.151137, 0, 0, 0, 0.151137, -1.12508e-14, 0, 1.12508e-14, 0.151137, 0.109873, 0.00953817, -0.3226 )
mesh = SubResource( 1 )

[node name="Head3" type="CSGMesh" parent="Head"]
transform = Transform( 0.151137, 0, 0, 0, 0.151137, -1.12508e-14, 0, 1.12508e-14, 0.151137, -0.107085, 0.00953817, -0.3226 )
mesh = SubResource( 1 )

[node name="Body" type="CSGMesh" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="LeftArm" type="Spatial" parent="."]
transform = Transform( 0.0871558, 0.498097, -0.86273, 0, 0.866025, 0.5, 0.996195, -0.0435779, 0.0754791, 0, 0, 0 )

[node name="LeftHand" type="CSGMesh" parent="LeftArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
mesh = SubResource( 3 )

[node name="RightArm" type="Spatial" parent="."]
transform = Transform( 0.0871558, -0.498097, 0.86273, 0, 0.866026, 0.5, -0.996195, -0.0435779, 0.0754791, 0, 0, 0 )

[node name="RightHand" type="CSGMesh" parent="RightArm"]
transform = Transform( 1.00076, -7.45058e-09, -7.45058e-09, 0, 1.00076, 7.98609e-08, 0, -8.61473e-09, 1.00076, -4.10556e-09, 5.96046e-08, -0.5 )
mesh = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/npc_clap = ExtResource( 3 )
anims/npc_fist_pump = SubResource( 4 )
anims/npc_idle = ExtResource( 4 )
anims/npc_shout = SubResource( 5 )
anims/npc_wave = SubResource( 6 )

[connection signal="timeout" from="ClapController/Timer" to="ClapController" method="_on_Timer_timeout"]
